--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "RobotoSlab";
-  src: url("/fonts/RobotoSlab-Regular.woff2"), url("/fonts/RobotoSlab-Regular.woff");
+  src: url("../fonts/RobotoSlab-Regular.woff2"), url("../fonts/RobotoSlab-Regular.woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "OpenSans";
-  src: url("/fonts/OpenSans-Regular.woff2"), url("/fonts/OpenSans-Regular.woff");
+  src: url("../fonts/OpenSans-Regular.woff2"), url("../fonts/OpenSans-Regular.woff");
   font-weight: 400;
   font-display: swap;
   font-style: normal;
