--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,56 @@
   font-style: normal;
 }
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -59,7 +109,7 @@ button:-moz-focus-inner {
 .welcome__title {
   position: relative;
   z-index: 100;
-  margin: 0;
+  margin: 0 0 10px 0;
   font-family: "RobotoSlab", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -78,6 +128,7 @@ button:-moz-focus-inner {
   content: "";
   display: block;
   position: absolute;
+  margin: 5px 0 0 0;
   z-index: -2;
   left: 0;
   top: 100%;
@@ -101,6 +152,7 @@ button:-moz-focus-inner {
 }
 
 .welcome__description {
+  margin: 10px 0 15px 0;
   font-family: "OpenSans", sans-serif;
   font-style: normal;
   font-weight: 400;
