Add all dependences for last commit

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,5 @@
 // Output files
 @import "_fonts.scss";
-@import "_reset.scss";
+@import "_normalize.scss";
 @import "_base.scss";
 @import "_media.scss";
