--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,5 +1,6 @@
 // Output files
 @import "_fonts.scss";
 @import "_normalize.scss";
+@import "_animations.scss";
 @import "_base.scss";
 @import "_media.scss";
