--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,7 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
   background: #000000;
+  width: 100%;
 }
 
 button {
@@ -31,7 +30,8 @@ button {
 
 .welcome {
   max-width: 600px;
-  margin: 0 30px 0 0;
+  cursor: default;
+  margin: 0 20px 0 0;
 
   &__title {
     position: relative;
@@ -61,6 +61,7 @@ button {
       width: 50px;
       height: 10px;
       background: #ffffff;
+      animation: blinking 320ms linear 0ms infinite alternate;
     }
 
     &:hover:after {
@@ -71,6 +72,7 @@ button {
       background: #ffffff;
       border-radius: 5px;
       box-shadow: 5px 5px 0px 1px #a7a7a7;
+      animation-play-state: paused;
     }
   }
 
