--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -8,7 +8,7 @@ button {
   background: transparent;
   border: none;
   cursor: pointer;
-  
+
   &:active,
   &:focus {
     outline: none;
@@ -33,10 +33,16 @@ button {
   cursor: default;
   margin: 0 20px 0 0;
 
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+
   &__title {
     position: relative;
     z-index: 1;
-    margin: 0 0 20px 0;
+    margin: 0 0 23px 0;
     font-family: "RobotoSlab", sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -146,5 +152,5 @@ button {
   display: block;
   border: 10px solid #ffffff;
   border-radius: 50%;
-  max-width: 280px;
+  max-width: 300px;
 }
