--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -5,24 +5,24 @@
 
     .welcome {
         order: 1;
-        margin-top: 10px;
+        margin: 10px 0 0 0;
         margin: 0;
     }
     .avatar {
         order: 0;
-        margin-bottom: 10px;
+        margin: 0 0 25px 0;
     }
 }
 
 @media only screen and (max-width: 655px) {
     .welcome {
         &__title {
-            font-size: 30px;
+            font-size: 34px;
             line-height: 34px;
         }
 
         &__description {
-            font-size: 14px;
+            font-size: 16px;
         }
     }
 
